2001-04-12  Jaka Mocnik  <jaka@gnu.org>

	* merged chema's changes from HEAD.

2001-03-22  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: changed one more free() to g_free().
	* src/hex-document.c: changed strdup() to g_strdup().

2001-03-18  Jaka Mocnik  <jaka@gnu.org>

	* src/converter.c: add octal conversion.
	* src/preferences.c (apply_changes_cb): accept format specifiers
	'x', 'X', 'o', 'd', 'p' and 'P'.
	* changed all sprintf()s to g_snprintf()s.

2001-03-08  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c (render_?c): fixed a strange bug that caused ghex to
	segfault when sl locale was set because gh->?disp_gc was NULL.
	* removed translated help from distribution.
	* bumped version to 1.2 and made a new tarball for GNOME 1.4.

2001-03-05  Jaka Mocnik  <jaka@gnu.org>

	* src/main.c (view_changed_cb): fixed a bug that caused slovene
	translation (and probably some other) to segfault as nouns change
	their form according to context and the previous code was using
	a translation from prefs dialog that differed from the one in menus.
	* src/chartable.c (create_char_table): translate titles.

2001-03-03 John Fleck <jfleck@inkstain.net>

	adding COPYING-DOCS

2001-03-03 John Fleck <jfleck@inkstain.net>

	* omf-install/Makefile.am - change the destination directory for the 
	omf files

2001-03-01 John Fleck <jfleck@inkstian.net>

	* htmldocs.make (template for making html docs directories)
	help/es/ghex-es.omf
	help/ja/ghex-ja.omf
	help/sv/ghex-sv.omf
	update appropriate makefiles, finishing ScrollKeeper support

2001-02-28 John Fleck <jfleck@inkstain.net>

	* add omf-install/Makefile.am
	app-docs.make
	help/C/ghex-C.omf

	app-docs.make is a standard template for docs makefiles, which is
	called from within help/C/Makefile.am. It includes
	ScrollKeeper/omf support

	help/C/ghex-C.omf is the omf file, which holds metadata about
	C/ghex.sgml needed by ScrollKeeper to build a library of docs

	omf-install is a directory used by ScrollKeeper/omf in the build
	process.
