@@ -1,3 +1,7 @@
+2001-04-15  Jaka Mocnik  <jaka@gnu.org>
+
+	* merged changes from HEAD: scrolling fixes and printing updates.
+
 2001-04-12  Jaka Mocnik  <jaka@gnu.org>
 
 	* merged chema's changes from HEAD.
